--- a/gallerij.html
+++ b/gallerij.html
@@ -10,8 +10,8 @@
 <img src="afbeeldingen/afbeelding 2.jpg" alt="foto Mosasaurus" title="foto Mosasaurus" width="600" height="400">
 <img src="afbeeldingen/afbeelding 3.jpg" alt="foto binnen van museum" title="foto binnen van museum" width="600" height="400">
 <h1>John Jagt over de Mosasaurus</h1>
-<audio controls
-src="C:\Users\Nicky\Desktop\Webdesign\Les 9 Huiswerktaak\audio\John Jagt over de Mosasaurus als dier.mp3"></audio>
+<audio controls>
+<source src="audio/John Jagt over de Mosasaurus als dier.mp3"></audio>
 </figure>
 </body>
 </html>
